--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 PORT=#3000
-MONGODB_URL='url mongo db'
+DB_URL='url pg db'
 JWT_PRIVATE_KEY= #recomendación tiene q poseer mayúsculas, minúsculas numero y caracteres especiales https://www.lastpass.com/es/features/password-generator
