--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 PORT=#3000
-DB_URL='url pg db'
+DB_URL='url pg db' # 'postgres://postgres:user@localhost:5432/nameDB'
 JWT_PRIVATE_KEY= #recomendación tiene q poseer mayúsculas, minúsculas numero y caracteres especiales https://www.lastpass.com/es/features/password-generator
