--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "16.0.3",
     "express": "4.18.2",
     "jose": "4.11.2",
+    "moment": "2.29.4",
     "mongoose": "6.6.1",
     "pg": "8.11.0",
     "pg-hstore": "2.3.4",
