--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ajv-formats": "2.1.1",
     "bcrypt": "5.1.0",
     "cors": "2.8.5",
+    "crypto-js": "4.2.0",
     "dotenv": "16.0.3",
     "express": "4.18.2",
     "jose": "4.11.2",
