feat: :sparkles: agregar soporte para Docker y PostgreSQL

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-PORT=#3000
-DB_URL='url pg db' # 'postgres://postgres:user@localhost:5432/nameDB'
-JWT_PRIVATE_KEY= #recomendación tiene q poseer mayúsculas, minúsculas numero y caracteres especiales https://www.lastpass.com/es/features/password-generator
+NODE_ENV=development
+
+DB_URL=postgres://postgres:postgres@localhost:5432/inventory_db
+
+PORT=3000
+
+JWT_PRIVATE_KEY='<p9CMwi*w[z$01o&=erJ3W5I-k~dFu,I.yX("Le'
