--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,24 @@
 services:
-  app:
+  farmapatria:
     build: .
     ports:
-      - '3000:3000'
-    environment:
-      - NODE_ENV=production
-      - DB_URL=postgres://postgres:postgres@postgres:5432/inventory_db
+      - '${PORT}:${PORT}'
     depends_on:
-      - postgres
-    volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
+      - farma-api
+    environment:
+      - JWT_PRIVATE_KEY=${JWT_KEY}
+      - DB_URL=${DB_URL}
 
-  postgres:
-    image: postgres:14-alpine
+  farma-api:
+    image: postgres
     ports:
       - '5432:5432'
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=inventory_db
+      - POSTGRES_USER=${DATABASE_USER}
+      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
+      - POSTGRES_DB=${DATABASE_NAME}
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql/data
 
 volumes:
-  postgres_data:
+  postgres-data:
